# High-Frequency-Trading-Application

./: .gitignore  CMakeLists.txt  New Findings.txt  README.md
include/: ExchangeAPI.h  ExchangeManager.h  LockFreeQueue.h  MarketData.h  MemoryPool.h  Order.h  PerformanceMonitor.h  RiskManager.h  Strategy.h  TestFramework.h
src/: ExchangeAPI.cpp  ExchangeManager.cpp  IntegrationTests.cpp  MarketData.cpp  Order.cpp  PerformanceBenchmarks.cpp  PerformanceMonitor.cpp  RiskManager.cpp  TestRunner.cpp  ThreadVerification.cpp  UnitTests.cpp  main.cpp  strategy.cpp
src/market_data/: market_data.csv
